# operator-shared-config-manager

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Chart.yaml  Makefile  README.md  index.yaml  pyproject.toml  values.yaml
.github/: ci-upgrade.yaml  dependabot.yaml  ghci.yaml  publish.yaml  renovate.json5
.github/workflows/: audit.yaml  auto-review.yaml  clean.yaml  dependency-update-review.yaml  main.yaml
ci/: config.yaml  k8s-logs  requirements.txt
docker/: .bandit.yaml  .prospector.yaml  Dockerfile  Pipfile  operator  operator.py  pyproject.toml  requirements.txt  shared_config_manager_operator.py
templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  crd-config.yaml  crd-source.yaml  deployment.yaml  serviceaccount.yaml
templates/tests/: test-connection.yaml
tests/: config.yaml  config_v4.yaml  shared-item.yaml  source.yaml  source_mix.yaml  source_other.yaml  source_other_v4.yaml  source_v3.yaml  source_v4.yaml  test_operator.py
