[tool.black]
line-length = 110
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 110

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict = true

[tool.poetry]
name = "operator-shared-config-manager"
version = "0.0.0"
description = "Operator Shared Config Manager"
authors = ["Camptocamp <info@camptocamp.com>"]
