[tool.poetry]
name = 'operator-shared-config-manager'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
kubernetes = "33.1.0"
kopf = "1.38.0"
pyyaml = "6.0.2"
requests = "2.32.4"
urllib3 = "2.5.0"
aiohttp = "3.12.15"
idna = "3.10"
certifi = "2025.8.3"
python-json-logger = "3.3.0"

[tool.poetry.dev-dependencies]
prospector = { version = "1.17.3", extras = ["with_bandit", "with_mypy", "with_ruff"] }
prospector-profile-utils = "1.26.2"
prospector-profile-duplicated = "1.10.5"
types-pyyaml = "6.0.12.20250516"
